# ocular-disease-recognition

./: .env.copy  .gitignore  README.md  app.py  clear_env.sh  docker-compose.yml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  install.sh
backend/: Dockerfile  README.md  app.py  classification.py  pyproject.toml  requirements.txt
frontend/: index.html  resultado.html
frontend/css/: footer.css  global.css  header-resultado.css  header.css  loading-resultado.css  main.css  style.css
frontend/js/: script.js
nginx/: Dockerfile  nginx.conf
templates/: index.html
