[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.7",
    "Flask==3.1.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "pillow==11.0.0",
    "Werkzeug==3.1.3"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
]


[tool.pytest.ini_options]
addopts = "--cov=controllers --cov=services --cov=middleware --cov-report=html"
testpaths = ["tests"]
